--- a/drive_times_report.qmd
+++ b/drive_times_report.qmd
@@ -45,7 +45,7 @@ google_map(key = api_key) %>%
 
 ```{r}
 #| echo: false
-
+library(tidyverse)
 ## Pick the times at which to generate travel times
 times_to_check <- Sys.time() + c(0, 15, 30, 45, 60)*60
 
